[package]
name          = "proptest-derive"
version       = "0.0.1"
authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
readme        = "README.md"

repository    = "https://github.com/Centril/proptest-derive"
documentation = "https://docs.rs/proptest-derive"

keywords      = ["derive", "arbitrary", "proptest", "testing", "quickcheck"]
categories    = ["development-tools::testing"]

description = """
Custom-derive for the Arbitrary trait of proptest.
"""

[badges]

maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dev-dependencies]
proptest = "0.3.2"
proptest-arbitrary = { path = "../proptest-arbitrary" }

[dependencies]

syn = { version = "0.11", features = ["full", "visit"] }

quote = "0.3.15"